tests/ui/issues/issue-11771.stderr
error[E0277]: cannot add `()` to `{integer}`
  --> $DIR/issue-11771.rs:3:7
   |
LL |     1 +
   |       ^ no implementation for `{integer} + ()`
   |
   = help: the trait `Add<()>` is not implemented for `{integer}`
   = help: the following other types implement trait `Add<Rhs>`:
             `&'a f128` implements `Add<f128>`
             `&'a f16` implements `Add<f16>`
             `&'a f32` implements `Add<f32>`
             `&'a f64` implements `Add<f64>`
             `&'a i128` implements `Add<i128>`
             `&'a i16` implements `Add<i16>`
             `&'a i32` implements `Add<i32>`
             `&'a i64` implements `Add<i64>`
           and 56 others

error[E0277]: cannot add `()` to `{integer}`
  --> $DIR/issue-11771.rs:8:7
   |
LL |     1 +
   |       ^ no implementation for `{integer} + ()`
   |
   = help: the trait `Add<()>` is not implemented for `{integer}`
   = help: the following other types implement trait `Add<Rhs>`:
             `&'a f128` implements `Add<f128>`
             `&'a f16` implements `Add<f16>`
             `&'a f32` implements `Add<f32>`
             `&'a f64` implements `Add<f64>`
             `&'a i128` implements `Add<i128>`
             `&'a i16` implements `Add<i16>`
             `&'a i32` implements `Add<i32>`
             `&'a i64` implements `Add<i64>`
           and 56 others

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
